Mon Nov 26 16:28:00 2001  James Aylett  <tartarus@users.sourceforge.net>

	* --no-recurse / -l option added; useful if your sites are
	  nested in their disc storage (particularly things like
	  http://example.com/ being a distinct site, with
	  http://example.com/product being within it)

	* --mime-type now really works (it was --mime-map in the code)

	* documentation updated further

Mon Nov 26 14:39:00 2001  James Aylett  <tartarus@users.sourceforge.net>

	* options parsing fixed so minimised/unrecognised long options
	  doesn't segfault

Mon Nov 26 14:00:13 2001  James Aylett  <tartarus@users.sourceforge.net>

	* omindex can now index part of a site (previously 'subsite')
	  by having an index base within the site's disc storage

Mon Nov 26 13:57:10 2001  James Aylett <tartarus@users.sourceforge.net>

	* Documentation updated for recent changes

Thu Nov 22 13:24:45 GMT 2001  Olly Betts <olly@survex.com>

	* Use $nice{} in query template, but don't use $freqs.  Use numbers as
	  page image button tooltips on Netscape 4.

Thu Nov 22 13:02:17 GMT 2001  Olly Betts <olly@survex.com>

	* Herded escaped CGI parameter mangling code back into cgiparam.cc;
	  added special handling for  numeric image button names.

Thu Nov 22 12:55:00 GMT 2001  Olly Betts <olly@survex.com>

	* Fixed $nice to put the comma (or dot) in the right place.

Tue Nov 20 17:30:19 GMT 2001  Olly Betts <olly@survex.com>

	* $lastpage now returns 0 when there are no matches (previously
	  gave a very large answer).

Tue Nov 20 12:30:47 GMT 2001  Olly Betts <olly@survex.com>

	* $terms now only returns terms which were in the parsed query
	  (boolean filter terms are excluded).

Tue Nov 20 12:07:54 GMT 2001  Olly Betts <olly@survex.com>

	* Fixed bug in date range filtering (got it wrong when start and end
	  date were in the same month).

	* DAYSMINUS now counts back from DATE1 (if specified) rather than
	  always counting back from the present.
